--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ server_tokens off;
 
 server {
     listen       80;
+    resolver 127.0.0.11; # Docker DNS resolver
 
     location / {
         root   /usr/share/nginx/html;
