--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 server_tokens off;
 
 server {
-    listen       80;
-    resolver 127.0.0.11; # Docker DNS resolver
+    listen      80;
+    resolver    127.0.0.11; # Docker DNS resolver
 
     location / {
         root   /usr/share/nginx/html;
@@ -14,14 +14,15 @@ server {
     }
 
     location /api/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header    Host $host;
+        proxy_set_header    X-Forwarded-Proto $scheme;
+        proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Real-IP $remote_addr;
 
-        set $api_host ${API_HOST};
-        set $api_port ${API_PORT};
+        set                 $upstream_app ${API_HOST};
+        set                 $upstream_port ${API_PORT};
+        set                 $upstream_proto http;
 
-        proxy_pass http://$api_host:$api_port/;
+        proxy_pass          $upstream_proto://$upstream_app:$upstream_port;
     }
 }
