--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,6 @@ server {
         set                 $upstream_port ${API_PORT};
         set                 $upstream_proto http;
 
-        proxy_pass          $upstream_proto://$upstream_app:$upstream_port;
+        proxy_pass          $upstream_proto://$upstream_app:$upstream_port/;
     }
 }
