--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api/ {
+    location /api {
         proxy_set_header    Host $host;
         proxy_set_header    X-Forwarded-Proto $scheme;
         proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -23,6 +23,7 @@ server {
         set                 $upstream_port ${API_PORT};
         set                 $upstream_proto http;
 
-        proxy_pass          $upstream_proto://$upstream_app:$upstream_port/;
+        rewrite             /api/(.*) /$1 break;
+        proxy_pass          $upstream_proto://$upstream_app:$upstream_port;
     }
 }
